--- a/config.json
+++ b/config.json
@@ -2,9 +2,13 @@
   "spec": "./out/spec_slip_success.ini",
   "prelude": "./exp.smt2",
   "lemmas": "./lemmas.k",
-  "source": "./dss/src/frob.2.sol",
-  "solJson": "./dss/out/frob.2.sol.json",
-  "name": "Lad",
+  "implements": [
+     "./dss/out/frob.2.sol.json"
+  ],
+  "behaviour_of": "Lad",
+  "var2name": {
+  },
+  "path_root": "dss",
   "host": "127.0.0.1:8080",
   "control": {
     "0"      : "branch 0",
